--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_locations"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="@dimen/card_margin_vertical"
@@ -8,7 +7,6 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_locations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/card_margin"
@@ -19,7 +17,6 @@
         android:paddingTop="5dp">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/ll"
             style="@style/Widget.CardContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,15 +27,13 @@
                 android:id="@+id/location_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Friends"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/location_floor"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="abc" />
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
