--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -11,6 +11,7 @@
         android:id="@+id/headerDrawer"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:contentDescription="@string/header_image"
         android:src="@drawable/twitter" />
 
 </LinearLayout>
