--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,11 +3,11 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/logo_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/launcher_icon"
         android:src="@mipmap/ic_launcher" />
 
 
