--- a/app/src/main/res/layout/activity_tracks.xml
+++ b/app/src/main/res/layout/activity_tracks.xml
@@ -1,6 +1,5 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -25,6 +24,7 @@
                 android:id="@+id/backdrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/backdrop_image"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:src="@color/color_primary"
