--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/selectableItemBackground"
+    android:baselineAligned="false"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -21,7 +21,6 @@
             android:background="#8a000000" />
 
         <View
-            android:id="@+id/track_bullet"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
@@ -52,15 +51,13 @@
             android:id="@+id/track_title"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Friends" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/track_description"
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="abc" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
