--- a/css/j-forms.css
+++ b/css/j-forms.css
@@ -40,7 +40,7 @@
 /* Header
 =============================== */
 .contact-forms .header {
-	background-color:#3f51b5;
+	background-color:#fff;
 	border-top:1px solid #7986cb;
 	-webkit-border-radius:3px 3px 0 0;
 	-moz-border-radius:3px 3px 0 0;
