--- a/android/app/src/main/res/menu/drawer.xml
+++ b/android/app/src/main/res/menu/drawer.xml
@@ -1,16 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single"
-        android:id="@+id/menu_top">
+    <group
+        android:id="@+id/menu_top"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_tracks"
             android:checked="true"
             android:icon="@drawable/ic_event_grey600_24dp"
             android:title="@string/menu_tracks" />
+        <item
+            android:id="@+id/nav_schedule"
+            android:checked="true"
+            android:icon="@drawable/ic_access_time_white_24dp"
+            android:title="@string/menu_schedule"/>
 
         <item
             android:id="@+id/nav_bookmarks"
             android:icon="@drawable/ic_bookmark_grey600_24dp"
             android:title="@string/menu_bookmarks" />
+
         <item
             android:id="@+id/nav_speakers"
             android:icon="@drawable/ic_people_grey600_24dp"
@@ -29,8 +36,9 @@
             android:title="@string/menu_locations" />
     </group>
 
-    <group android:checkableBehavior="none"
-        android:id="@+id/menu_bottom">
+    <group
+        android:id="@+id/menu_bottom"
+        android:checkableBehavior="none">
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_grey600_24dp"
