--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -17,4 +17,6 @@
     <dimen name="sponsor_padding">10dp</dimen>
     <dimen name="speaker_margin">20dp</dimen>
     <dimen name="social_image_icon">40dp</dimen>
+    <item name="body_1_spacing" format="float" type="dimen">1.22448979592</item>
+
 </resources>
