refactor and code cleanup

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -49,8 +49,10 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#FAFAFA</item>
     </style>
+
     <style name="TextAppearance.Body1" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:textSize">14sp</item> <!-- bug in AppCompat, can remove this when it's fixed -->
+        <item name="android:textSize">14sp
+        </item> <!-- bug in AppCompat, can remove this when it's fixed -->
         <item name="android:textColor">?android:textColorSecondary</item>
     </style>
 
