improved code quality, removed unused code

--- a/android/app/src/main/res/layout/item_track.xml
+++ b/android/app/src/main/res/layout/item_track.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:paddingLeft="16dp"
-        android:paddingStart="16dp">
+        android:paddingRight="16dp">
 
         <View
             android:id="@+id/track_top"
