--- a/android/app/src/main/res/layout/nav_header.xml
+++ b/android/app/src/main/res/layout/nav_header.xml
@@ -5,6 +5,7 @@
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="4dp"
+    android:background="@color/color_primary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
@@ -12,6 +13,6 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:contentDescription="@string/header_image"
-        android:src="@drawable/twitter" />
+        android:src="@mipmap/ic_launcher" />
 
 </LinearLayout>
