--- a/android/app/src/main/res/layout/activity_tracks.xml
+++ b/android/app/src/main/res/layout/activity_tracks.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.TracksActivity">
+    tools:context=".activities.TrackSessionsActivity">
 
     <RelativeLayout
         android:id="@+id/content_frame"
