--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="widget_margin">8dp</dimen>
 
+    <dimen name="sessionList_item_margins">16dp</dimen>
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
     <dimen name="widget_default_height">180dp</dimen>
@@ -21,7 +22,6 @@
     <dimen name="track_title_margin">6dp</dimen>
     <dimen name="track_data_size">16sp</dimen>
     <item name="body_1_spacing" format="float" type="dimen">1.22448979592</item>
-
     <!--Margin decoration -->
     <dimen name="item_margin">4dp</dimen>
     <dimen name="item_align">16dp</dimen>
